2011-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSKeyValueObserving.m: Recommit
	Reviewed and tested.
	* Source/NAutoreleasePool.m: Make +initialize do nothing so that it
	won't interfere with anythign else when called by [NSObject+initialize]

2011-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSLocale.m: Recommit
	* Source/NSUnarchiver.m: Recommit
	I have now test these two and recommited them as working.
	* Source/NSPropertyList.m: Revert
	These was quietly modified/broken since my last commit ...
	reverting to the previous tested/working version.

2011-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSArray.m: Recommit fixed version
	* Source/GSICUString.h: Formatting fixups
	* Source/GSICUString.m: Recommit
	* Source/NSAttributedString.m: Recommit
	* Source/NSData.m: Recommit
	* Source/NSMethodSignature.m: Recommit

2011-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/NSPropertyList.m: Recommit with modification fixed and tested.
	* Source/NSOperation.m: new tweak to avoid compiler warning.
	* Source/GSPrivate.h: Recommit most recent version after testing.

2011-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	Revert everything back from boken code at 32071 to wrking code at 32051
	due to loads of commits of code which have been occurring to fast for
	anyone to review, and either don't compile or fail the testsuite.
	Lets go through things checking that they at least compile with gcc
	and pass the testsuite before we recommit them!  

2011-02-11  Richard Frith-Macdonald <rfm@gnu.org>

	* Source/GSICUString.m:
	Fix leak spotted by static analyser.
	* Source/NSArray.m:
	Fix error in enumeration changes causing compile failure.

2011-02-11 12:06  David Chisnall <theraven@gna.org>

	* libs/base/trunk/Source/GSPrivate.h: Added exception-safe version
	  of the GS_BEGINITEMBUF() macro. As a side effect, this should
	  silence the zero-sized VLA warnings in the static analyser.
	  